# img_tools

./: .gitignore  README.md  img_tools.py  img_tools_cli.py  interaction_tui.py  main.py  pyproject.toml  requirements.txt
src/core/: constants.py  enums.py
src/processor/: __init__.py  compression.py  duplication.py  format_conversion.py  rotation.py  super_resolution.py
src/scripts/: build.py
src/utils/: io_uitls.py  sound_utils.py
tests/: test_compression.py  test_duplication.py  test_format_conversion.py  test_resolution.py  test_rotation.py  test_super_resolution.py
